--- a/searchsx.html
+++ b/searchsx.html
@@ -101,8 +101,8 @@
 										</li>
 									</div>
 									<div class="col-3 " align="center">
-										<li><a href="#" style="font-size: 3.8vw;padding: 1vw;"><input type="number" style="border-style: none;width: 80%; height: auto;color:#4C51B1;"
-												 name="position" id="positionfu" placeholder="折旧度" style="number-align: center;" oninput="if(value.length>2)value=value.slice(0,2)"
+										<li><a href="#" style="font-size: 3.8vw;padding-left: 1vw;"><input type="number" style="border-style: none;width: 70%; height: auto;color:#4C51B1;"
+												 name="position" id="positionfu" placeholder="折旧度"  oninput="if(value.length>2)value=value.slice(0,2)"
 												 onkeyup="inputfu('positionfu')" /><span id="baifenhao" style="color: var(--sColor);">%</span></a>
 										</li>
 										
