--- a/initial.html
+++ b/initial.html
@@ -131,7 +131,7 @@
 					</div>-->
 					<div class="smaller-word button-line">
 						<button style="padding-left: 0px 30px;" class="button_sure">详情</button>
-						<button style="padding-left: 0px 30px;" class="button_sure" onclick="open_instruction("off-shelves")">下架</button>
+						<button style="padding-left: 0px 30px;" class="button_sure" onclick="open_instruction('off-shelves')">下架</button>
 						<button style="padding-left: 0px 30px;" class="button_sure">改价</button>
 					</div>
 					<!--提示弹出框-->
@@ -141,10 +141,10 @@
 								<div class="container-fluid" style="padding: 0rem;">
 									<div class="row" style="padding: 0rem;margin: 0;">
 										<div class="col-10" align="center" style="padding:0rem;color: white;font-weight: bold;font-size: 4vw;">
-											在此添加标题
+											提示
 										</div>
 										<div class="col-2" align="right" style="padding-right: 3vw">
-											<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction('在此添加ID')">
+											<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction('off-shelves')">
 												<use xlink:href="#icon-guanbi"></use>
 											</svg>
 										</div>
@@ -152,7 +152,9 @@
 								</div>
 							</div>
 							<div style="height: 50%;width: 90%;margin-top: 6vw;" class="son box6 tip-css">
-								在此添加内容
+								确定要下架如下商品吗？
+								<br/>
+								巴拉巴拉
 							</div>
 						</div>
 					</div>
