--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -25,8 +25,7 @@
 							<use xlink:href="#icon-fanhui"></use>
 						</svg>
 					</div>
-					<div class="col-8" style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;"
-					 align="center">
+					<div class="col-8" style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;">
 						正在与<a style="color: white;font-size: 6vw;font-weight: bold;">胡萝卜</a>私聊
 					</div>
 					<div class="col-2"></div>
