--- a/searchmain.html
+++ b/searchmain.html
@@ -184,7 +184,6 @@
 												 name="position" id="positionfu" placeholder="折旧度"  oninput="if(value.length>2)value=value.slice(0,2)"
 												 onkeyup="inputfu('positionfu')" /><span id="baifenhao" style="color: var(--sColor);">%</span></a>
 										</li>
-										
 									</div>
 									<div class="col-3 " align="center">
 										<li><a href="#" style="font-size: 3.8vw;"><input type="text" style="border-style: none;width: 60%; height: auto;color:#4C51B1;"
@@ -192,18 +191,17 @@
 									</div>
 									<div class="col-3 " align="center">
 										<li><li><a href="#" style="font-size: 3.8vw;"><input type="text" style="border-style: none;width: 60%; height: auto;color:#4C51B1;"
-						 name="position" id="position" placeholder="最高价" /></a></li>
-										</li>
+						 name="position" id="position" placeholder="最高价"maxlength="5" /></a></li>
+										</li>‘
 									</div>
 								</div>
 							</ul>
 						</div>
-						<div class="suoxiao" align="right">
-							<a href="search.html">
+						<div class="suoxiao"id="suoxiaomain" align="right" onclick="changesuoxiaomain()" >
 								<svg class="icon" aria-hidden="true" style="color:#4C51B1;opacity:0.8; font-size:8vw;">
 									<use xlink:href="#icon-shousuo"></use>
 								</svg>
-							</a>
+							
 						</div>
 					</div>
 				</div>
@@ -269,6 +267,22 @@
 					zhankai = true;
 				}
 			}
+			// 点击缩小变回主界面
+			var suoxiaomain=false;
+			function changesuoxiaomain(){
+				 // alert(123);
+				var opensuoxiaomain = document.getElementById("zhankaiafter");
+				var closesuoxiaomain = document.getElementById("zhankaibefore");
+				if (suoxiaomain) {
+					closesuoxiaomain.style.display="";
+					opensuoxiaomain.style.display= "none";
+					suoxiaomain = false;
+				}else{
+					closesuoxiaomain.style.display="none";
+					opensuoxiaomain.style.display="";
+					suoxiaomain = true;
+				}
+			}
 			// 对折旧度进行编辑
 			function inputfu(obj) {
 				// alert(123);
@@ -281,6 +295,7 @@
 					bfh.style.color='var(--sColor)';
 				}
 			};
+			
 		</script>
 		<style>
 			/* 去掉 加减条 */
