--- a/Address.html
+++ b/Address.html
@@ -30,39 +30,43 @@
 				</div>
 			</div>
 		</nav>
-		
+
 		<div>
 			<!-- 城市定位 -->
-			<div id="cehngshi-liu" class="dialog-box shadow" style="margin: 70px 100px;">
-				<!-- 城市定位文本 -->
-				<div class="Address-liu">
-					定位中
+			<p>
+				<div id="cehngshi-liu" class="dialog-box shadow" style="margin: 70px 100px;">
+					<!-- 城市定位文本 -->
+					<div class="Address-liu">
+						定位中
+					</div>
+					<!-- 城市定位图标 -->
+					<div class="head-photo">
+						<svg class="icon bell-liu address-icon-liu" aria-hidden="true">
+							<use xlink:href="#icon-weizhi"></use>
+						</svg>
+					</div>
 				</div>
-				<!-- 城市定位图标 -->
-				<div class="head-photo">
-					<svg class="icon bell-liu address-icon-liu" aria-hidden="true">
-						<use xlink:href="#icon-weizhi"></use>
-					</svg>
-				</div>
-			</div>
+			</p>
 			<!-- 高校定位 -->
-			<div id="gaoxiao-liu" class="dialog-box shadow" style="margin: 20px 100px;">
-				<!-- 高校定位文本 -->
-				<div class="Address-liu">
-					点击选择您的高校
+			<p>
+				<div id="gaoxiao-liu" class="dialog-box shadow" style="margin: 20px 100px;">
+					<!-- 高校定位文本 -->
+					<div class="Address-liu">
+						点击选择您的高校
+					</div>
+					<!-- 高校定位图标 -->
+					<div class="head-photo">
+						<svg class="icon bell-liu address-icon-liu" aria-hidden="true">
+							<use xlink:href="#icon-gaoxiao"></use>
+						</svg>
+					</div>
 				</div>
-				<!-- 高校定位图标 -->
-				<div class="head-photo">
-					<svg class="icon bell-liu address-icon-liu" aria-hidden="true" >
-						<use xlink:href="#icon-gaoxiao"></use>
-					</svg>
-				</div>
-			</div>
+			</p>
 		</div>
 		<!-- 保存按钮 -->
 		<div align="center">
-			<input type="button" name="" id="button-gaoxiao-liu" value="保存" class="button-gaoxiao-liu"  />
+			<input type="button" name="" id="button-gaoxiao-liu" value="保存" class="button-gaoxiao-liu shadow " />
 		</div>
-		
+
 	</body>
 </html>
