优化城市选择器显示

--- a/chengshi-input.html
+++ b/chengshi-input.html
@@ -17,14 +17,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="asserts/CSS/cityselect.css">
 		<style type="text/css">
-			.demo {
+			/* .demo {
 				width: 220px;
 				margin: 50px auto;
 			}
 
 			.demo input {
 				padding: 12px 18px;
-			}
+			} */
 		</style>
 		<style>
 			::-webkit-input-placeholder { /* WebKit browsers */
@@ -53,7 +53,7 @@
 					</div>
 					<!-- 输入框 -->
 					<div class="index-zhe shadow position-liu col-10">
-						<input type="text" class="cityinput" style="padding-left: 2vw;margin: 0;font-size: 6vw;border-style: none;width: 80%; height: auto;"
+						<input type="text" class="cityinput" style="padding-left: 2vw;margin-top: 1vw;font-size: 6vw;border-style: none;width: 80%; height: auto;"
 						 name="position" id="citySelect" placeholder="输入您的城市" />
 						<svg class="icon" aria-hidden="true" style="color:var(--fColor);font-size: 11vw;float: right;">
 							<use xlink:href="#icon-sousuo"></use>
