--- a/chengshi-input.html
+++ b/chengshi-input.html
@@ -8,11 +8,10 @@
 		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
 		<!-- JS库 -->
-		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
 		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
 		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
-
+		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="asserts/CSS/cityselect.css">
@@ -53,11 +52,9 @@
 					</div>
 					<!-- 输入框 -->
 					<div class="index-zhe shadow position-liu col-10">
-						<input type="text" class="cityinput" style="padding-left: 2vw;margin-top: 1vw;font-size: 6vw;border-style: none;width: 80%; height: auto;"
+						<input type="text" class="cityinput" style="padding-left: 2vw;font-size: 6vw;border-style: none;width: 100%; height: auto;"
 						 name="position" id="citySelect" placeholder="输入您的城市" />
-						<svg class="icon" aria-hidden="true" style="color:var(--fColor);font-size: 11vw;float: right;">
-							<use xlink:href="#icon-sousuo"></use>
-						</svg>
+						
 					</div>
 				</div>
 			</div>
