--- a/Add.html
+++ b/Add.html
@@ -60,9 +60,9 @@
 		<div style="padding-left: 5vw;padding-right: 5vw;padding-top: 5vw;">
 			<!-- 交易方式 -->
 			<a style="color: var(--fColor);font-weight: bold;font-size: 4vw;">请选择您本次支持的交易方式：</a>
-			<div class="container-fluid" style="width: 100%;margin-top: 1vw;height: 100vw;" onload="pay_way()">
+			<div class="container-fluid" style="width: 100%;margin-top: 1vw;" onload="pay_way()">
 				<div id="pay-way"><img class="svg progress-zhe" src="asserts/img/spinner.svg" /></div>
-				<div class="row" style="margin-top: 3vw;">
+				<div class="row" style="margin-top: 3vw;" >
 					<div class="col-4">
 						<div class="index-zhe shadow" style="font-size: 3vw;" align="center"><svg class="icon" aria-hidden="true" style="color: var(--fColor);">
 								<use xlink:href="#icon-weizhi"></use>
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="shadow" style="border-radius: 2.25rem;margin-top: 3vw;padding:2vw;padding-left: 5vw;padding-right: 5vw;"
+				<div class="shadow" style="border-radius: 2.25rem;margin-top: 3vw;padding:2vw;padding-left: 5vw;padding-right: 5vw;max-height: 120vw;"
 				 align="center">
 					<input type="text" class="index-zhe shadow" style="margin-left: 0vw;padding-left: 3vw;font-size: 3vw;border-style: none;height: auto;width:100%;"
 					 name="itemName" placeholder="物品名称" />
@@ -166,102 +166,120 @@
 							取消添加
 						</div>
 					</div>
-					<div class="bottom-liu shadow-irreguler" style="width: 100%;height: 10vw;background-color: var(--fColor);">
-						<div align="center" style="font-size: 5vw;color: white;padding-top: 1vw;">
-							确认添加
-						</div>
-					</div>
 				</div>
 			</div>
-			<!-- 浮动说明 -->
-			<div class="father" style="z-index: 9999;display: none;" id="instruction-second">
-				<div style="background: white;" class="son float-instruction shadow-irreguler">
-					<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
-						<div class="container-fluid" style="padding: 0rem;">
-							<div class="row" style="padding: 0rem;margin: 0;">
-								<div class="col-10" align="center" style="padding:0rem;color: white;font-weight: bold;font-size: 4vw;">
-									为什么无法选择？
-								</div>
-								<div class="col-2" align="right" style="padding-right: 3vw">
-									<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction('instruction-second')">
-										<use xlink:href="#icon-guanbi"></use>
-									</svg>
-								</div>
+		</div>
+		<div class="row" style="margin-top: 2vw;margin-bottom: 10vw;" onclick="addNewAdd()" >
+			<div class="col-2">
+
+			</div>
+			<div class="col-2">
+				<svg class="icon" aria-hidden="true" style="color: var(--sColor);font-size: 12vw;margin-top: 2vw;">
+					<use xlink:href="#icon-xinzeng"></use>
+				</svg>
+			</div>
+			<div class="col-6">
+				<a style="font-size: 10vw;color: var(--sColor);">继续添加</a>
+			</div>
+			<div class="col-2">
+
+			</div>
+		</div>
+		<div class="bottom-liu shadow-irreguler" style="width: 100%;height: 10vw;background-color: var(--fColor);">
+			<div align="center" style="font-size: 5vw;color: white;padding-top: 1vw;">
+				确认添加
+			</div>
+		</div>
+
+		<!-- 浮动说明 -->
+		<div class="father" style="z-index: 9999;display: none;" id="instruction-second">
+			<div style="background: white;" class="son float-instruction shadow-irreguler">
+				<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
+					<div class="container-fluid" style="padding: 0rem;">
+						<div class="row" style="padding: 0rem;margin: 0;">
+							<div class="col-10" align="center" style="padding:0rem;color: white;font-weight: bold;font-size: 4vw;">
+								为什么无法选择？
+							</div>
+							<div class="col-2" align="right" style="padding-right: 3vw">
+								<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction('instruction-second')">
+									<use xlink:href="#icon-guanbi"></use>
+								</svg>
 							</div>
 						</div>
 					</div>
-					<div style="height: 70%;width: 90%;margin-top: 6vw;" class="son box6 tip-css">
-						您当前区域暂未部署悠悦易存产品或由于您未选择您的高校系统无法判断您的区域是否部署悠悦易存产品，您暂时无法使用平台交易。
-					</div>
+				</div>
+				<div style="height: 70%;width: 90%;margin-top: 6vw;" class="son box6 tip-css">
+					您当前区域暂未部署悠悦易存产品或由于您未选择您的高校系统无法判断您的区域是否部署悠悦易存产品，您暂时无法使用平台交易。
 				</div>
 			</div>
-			<!-- 控制多选框 -->
-			<script>
-				CSS.paintWorklet.addModule('asserts/js/Checkbox.js')
-				CSS.registerProperty({
-					name: "--bg-color",
-					syntax: "<color>",
-					initialValue: "#fff"
-				});
-				CSS.registerProperty({
-					name: "--border-color",
-					syntax: "<color>",
-					initialValue: "#fff"
-				});
-				CSS.registerProperty({
-					name: "--line-color",
-					syntax: "<color>",
-					initialValue: "#fff"
-				});
-				const changeIndeterminate = document.querySelector('#changeIndeterminate')
-				const checkbox = document.querySelectorAll('.custom-checkbox')[0]
-				const checkbox1 = document.querySelectorAll('.custom-checkbox')[1]
-				checkbox.indeterminate = true
-				checkbox1.indeterminate = true
-				changeIndeterminate.addEventListener('click', () => {
-					checkbox.indeterminate = !checkbox.indeterminate
-					checkbox1.indeterminate = !checkbox1.indeterminate
-				})
-			</script>
-			<!-- textarea高度自适应 -->
-			<script>
-				document.onkeydown = function() {
-					var textarea = document.getElementById('fit2')
-					var pre = document.getElementById('fit1');
-					pre.innerHTML = textarea.value;
-					var screenHeight = window.screen.height;
-					var realHeight = pre.offsetHeight;
-					// alert(realHeight+screenHeight);//offsetHeight = height + padding + border
-					if (realHeight > (2 / 100) * screenHeight) textarea.style.height = (realHeight + (9 / 100) * screenHeight - (1 /
-						100) * screenHeight) + 'px'; //加24为一行的高度，减32为padding和border
-					else textarea.style.height = realHeight - 5 * screenHeight + 'px';
+		</div>
+		<!-- 控制多选框 -->
+		<script>
+			CSS.paintWorklet.addModule('asserts/js/Checkbox.js')
+			CSS.registerProperty({
+				name: "--bg-color",
+				syntax: "<color>",
+				initialValue: "#fff"
+			});
+			CSS.registerProperty({
+				name: "--border-color",
+				syntax: "<color>",
+				initialValue: "#fff"
+			});
+			CSS.registerProperty({
+				name: "--line-color",
+				syntax: "<color>",
+				initialValue: "#fff"
+			});
+			const changeIndeterminate = document.querySelector('#changeIndeterminate')
+			const checkbox = document.querySelectorAll('.custom-checkbox')[0]
+			const checkbox1 = document.querySelectorAll('.custom-checkbox')[1]
+			checkbox.indeterminate = true
+			checkbox1.indeterminate = true
+			changeIndeterminate.addEventListener('click', () => {
+				checkbox.indeterminate = !checkbox.indeterminate
+				checkbox1.indeterminate = !checkbox1.indeterminate
+			})
+		</script>
+		<!-- textarea高度自适应 -->
+		<script>
+			document.onkeydown = function() {
+				var textarea = document.getElementById('fit2')
+				var pre = document.getElementById('fit1');
+				pre.innerHTML = textarea.value;
+				var screenHeight = window.screen.height;
+				var realHeight = pre.offsetHeight;
+				// alert(realHeight+screenHeight);//offsetHeight = height + padding + border
+				if (realHeight > (2 / 100) * screenHeight) textarea.style.height = (realHeight + (9 / 100) * screenHeight - (1 /
+					100) * screenHeight) + 'px'; //加24为一行的高度，减32为padding和border
+				else textarea.style.height = realHeight - 5 * screenHeight + 'px';
+			}
+		</script>
+		<!-- 控制图片上传 -->
+		<script>
+			$("#file-1").fileinput({
+				uploadUrl: 'asserts/img', // you must set a valid URL here else you will get an error
+				allowedFileExtensions: ['jpg', 'png', 'gif'],
+				overwriteInitial: false,
+				maxFileSize: 5000,
+				maxFilesNum: 9,
+				//allowedFileTypes: ['image', 'video', 'flash'],
+				slugCallback: function(filename) {
+					return filename.replace('(', '_').replace(']', '_');
 				}
-			</script>
-			<!-- 控制图片上传 -->
-			<script>
-				$("#file-1").fileinput({
-					uploadUrl: 'asserts/img', // you must set a valid URL here else you will get an error
-					allowedFileExtensions: ['jpg', 'png', 'gif'],
-					overwriteInitial: false,
-					maxFileSize: 5000,
-					maxFilesNum: 9,
-					//allowedFileTypes: ['image', 'video', 'flash'],
-					slugCallback: function(filename) {
-						return filename.replace('(', '_').replace(']', '_');
-					}
-				});
-			</script>
-			<!-- 折旧度百分比 -->
-			<script>
-				function inputfu(obj) {
-					// alert(123);
-					var bfh = document.getElementById('baifenhao');
-					if (document.getElementById(obj).value.length !== 0) {
-						bfh.style.color = 'var(--fColor)';
-					} else {
-						bfh.style.color = 'var(--sColor)';
-					}
-				};
-			</script>
+			});
+		</script>
+		<!-- 折旧度百分比 -->
+		<script>
+			function inputfu(obj) {
+				// alert(123);
+				var bfh = document.getElementById('baifenhao');
+				if (document.getElementById(obj).value.length !== 0) {
+					bfh.style.color = 'var(--fColor)';
+				} else {
+					bfh.style.color = 'var(--sColor)';
+				}
+			};
+		</script>
 	</body>
 </html>
