--- a/initial.html
+++ b/initial.html
@@ -14,20 +14,28 @@
 		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 		<script>
+			//发布的物品点击选中时 3个button变色
 			$(function() {
 				var s = $("input[name='物品']");
-				var b = $("#button-test");
+				var b = $("button.button-test");
 				s.each(function(i) {
 					$(this).click(function() {
 						if(this.checked == true) {
-//							alert(this.value);
-							b.css("background-color","#4C51B1");
-						}else{
-							b.css("background-color","#6D6D6D");
+							b.css("background-color", 'var(--fColor)');
+						} else if(s[0].checked == false && s[1].checked == false && s[2].checked == false) {
+							b.css("background-color", 'var(--sColor)');
 						}
 					});
 				});
 			})
+
+			function open_dialog(canshu) {
+				var div_first = document.getElementById(canshu);
+				var off_button = document.getElementById('off');
+				if(off_button.style.backgroundColor=='var(--fColor)'){
+					div_first.style.display = "block";
+				}
+			}
 		</script>
 	</head>
 
@@ -140,15 +148,16 @@
 							<input id="item2" type="checkbox" name="物品" class="custom-checkbox">戴尔笔记本-7成新-¥3300
 						</li>
 						<li class="item-font" style="margin-top:20px;">
-							<input id="item3" type="checkbox" name="物品" class="custom-checkbox" onclick="changeButtonColor()">联想笔记本-8成新-¥3400
+							<input id="item3" type="checkbox" name="物品" class="custom-checkbox">联想笔记本-8成新-¥3400
 						</li>
 					</ul>
 					<!--<div class="release-item">
 					</div>-->
 					<div class="smaller-word button-line">
-						<button id="button-test" style="padding-left: 0px 30px; background-color:var(--sColor);" class="button_sure ">详情</button>
-						<button style="padding-left: 0px 30px; background-color:var(--sColor);" class="button_sure " onclick="open_instruction('off-shelves')">下架</button>
-						<button style="padding-left: 0px 30px; background-color:var(--sColor);" class="button_sure ">改价</button>
+						<!--button-test用于点击物品变色 js-->
+						<button style="padding-left: 0px 30px; background-color:var(--sColor);" class="button_sure button-test">详情</button>
+						<button id="off" style="padding-left: 0px 30px; background-color:var(--sColor);" class="button_sure button-test" onclick="open_dialog('off-shelves')">下架</button>
+						<button style="padding-left: 0px 30px; background-color:var(--sColor);" class="button_sure button-test">改价</button>
 					</div>
 					<!--提示弹出框-->
 					<div class="father" style="z-index: 9999; display: none;" id="off-shelves">
@@ -168,8 +177,9 @@
 								</div>
 							</div>
 							<div style="height: 50%;width: 90%;margin-top: 6vw;" class="son box6 tip-css">
-								确定要下架如下商品吗？
-								<br/> 巴拉巴拉
+								<p1>确定要下架如下商品吗？</p1>
+								<br/>
+								<p2>巴拉巴拉</p2> 
 							</div>
 						</div>
 					</div>
